기준년월 검색창 추가 및 수정

--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -116,6 +116,11 @@
 			.no-top-border {
 				border-top: none !important;
 			}
+			.form-group {
+				display: flex;
+				flex-wrap: wrap; /* 여러 요소를 한 줄에 배치 */
+				align-items: center;
+			}
 
 		</style>
 		<!-- litepicker library for making a datepicker -->
