--- a/src/main/resources/templates/views/wrk/fil/WRKFIL004M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL004M0.html
@@ -21,84 +21,120 @@
 								<div class="col-auto">
 									<label class="form-label">Load Date: </label>
 									<div class="input-icon">
-										<input class="form-control select-date p-1" placeholder="Select a date" id="datepicker-icon" value="2020-06-20" style="padding: 3px" /> 
-                    <span class="input-icon-addon ">  <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                          <path d="M4 7a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2v-12z" />
-                          <path d="M16 3v4" />
-                          <path d="M8 3v4" />
-                          <path d="M4 11h16" />
-                          <path d="M11 15h1" />
-                          <path d="M12 15v3" /></svg>
+										<input class="form-control select-date p-1" placeholder="Select a date" id="datepicker-icon" value="2020-06-20" style="padding: 3px" size=15 /> 
+										<span class="input-icon-addon ">  <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+											<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+											<path d="M4 7a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2v-12z" />
+											<path d="M16 3v4" />
+											<path d="M8 3v4" />
+											<path d="M4 11h16" />
+											<path d="M11 15h1" />
+											<path d="M12 15v3" /></svg>
 										</span>
 									</div>
 								</div>
-                <div class="col-auto mt-4">
-                  <div class="">
-                    ~
-                  </div>
-                </div>
-								<div class="col-auto">
-									<label class="form-label">&nbsp; </label>
-									<div class="input-icon">
-										<input class="form-control  select-date p-1" placeholder="Select a date" id="datepicker-icon-prepend" value="2020-06-20" /> <span class="input-icon-addon"> <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                          <path d="M4 7a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2v-12z" />
-                          <path d="M16 3v4" />
-                          <path d="M8 3v4" />
-                          <path d="M4 11h16" />
-                          <path d="M11 15h1" />
-                          <path d="M12 15v3" />
-                        </svg>
-										</span>
-									</div>
-								</div>
-                 <!-- Month Select -->
-                 <div class="col-auto">
-                  <label class="form-label">Standard Year/Month: </label>
-                  <input
-                    id="inpStartStdYm"
-                    type="text"
-                    name="input-mask"
-                    class="form-control select-month-year p-1"
-                    data-mask="00/0000"
-                    data-mask-visible="true"
-                    placeholder="00/0000"
-                    autocomplete="off"
-                  />
-                </div>
-                <div class="col-auto">
-                  <div class="input-icon mt-4">
-                    ~
-                  </div>
-                </div>
-                <!-- Year Select -->
-                <div class="col-auto">
-                  <label class="form-label">&nbsp; </label>
-                  <input
-                    id="inpEndStdYm"
-                    type="text"
-                    name="input-mask"
-                    class="form-control select-month-year p-1"
-                    data-mask="00/0000"
-                    data-mask-visible="true"
-                    placeholder="00/0000"
-                    autocomplete="off"
-                  />
-                </div>
-                <div class="col"> 
-                  <button
-                    name="btnSearch" 
-                    type="button" 
-                    class="btn btn-primary search-button p-1"
-                    onclick="getSearchList()"
-                    data-test="create-button"
-                  >
-                    Search
-                  </button>
-                </div>
-                <div class="row mt-3"></div>
+						<div class="col-auto mt-4 g-0">
+							<div class="">
+							~
 							</div>
+						</div>
+						<div class="col-auto">
+							<label class="form-label">&nbsp; </label>
+							<div class="input-icon">
+							<input class="form-control  select-date p-1" placeholder="Select a date" id="datepicker-icon-prepend" value="2020-06-20" size=15 /> <span class="input-icon-addon"> <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+								<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+								<path d="M4 7a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2v-12z" />
+								<path d="M16 3v4" />
+								<path d="M8 3v4" />
+								<path d="M4 11h16" />
+								<path d="M11 15h1" />
+								<path d="M12 15v3" />
+								</svg>
+												</span>
+							</div>
+						</div>
+				<div class="col-auto">
+					<label class="form-label" style="flex-basis: 100%; margin-bottom: 0.5rem;">Standard Year/Month:</label>
+					<div class="form-group">
+						<select name="user[year]" class="form-select select-month-year p-1" id="inpStartStdYr" style="display:flex; width: 100px; margin-right: 10px">
+							<option selected value="">- Year -</option>
+							<!-- Year Options -->
+							<option value="2020">2020</option>
+							<option value="2021">2021</option>
+							<option value="2022">2022</option>
+							<option value="2023">2023</option>
+							<option value="2024">2024</option>
+							<option value="2025">2025</option>
+							<option value="2026">2026</option>
+						</select>
+						<select name="user[month]" class="form-select select-month-year p-1" id="inpStartMnth" style="display:flex; width: 120px;">
+							<option selected value="">- Month -</option>
+							<!-- Month Options -->
+							<option value="1">January</option>
+							<option value="2">February</option>
+							<option value="3">March</option>
+							<option value="4">April</option>
+							<option value="5">May</option>
+							<option value="6">June</option>
+							<option value="7">July</option>
+							<option value="8">August</option>
+							<option value="9">September</option>
+							<option value="10">October</option>
+							<option value="11">November</option>
+							<option value="12">December</option>
+						</select>
+					</div>
+				</div>
+				<div class="col-auto mt-4 g-0">
+					<div class="">
+					~
+					</div>
+				</div>
+				<div class="col-auto">
+					<label class="form-label" style="flex-basis: 100%; margin-bottom: 0.5rem;">&nbsp;</label>
+					<div class="form-group">
+						<select name="user[year]" class="form-select select-month-year p-1" id="inpEndStdYr" style="display:flex; width: 100px; margin-right: 10px">
+							<option selected value="">- Year -</option>
+							<!-- Year Options -->
+							<option value="2020">2020</option>
+							<option value="2021">2021</option>
+							<option value="2022">2022</option>
+							<option value="2023">2023</option>
+							<option value="2024">2024</option>
+							<option value="2025">2025</option>
+							<option value="2026">2026</option>
+						</select>
+						<select name="user[month]" class="form-select select-month-year p-1" id="inpEndMnth" style="display:flex; width: 120px;">
+							<option selected value="">- Month -</option>
+							<!-- Month Options -->
+							<option value="1">January</option>
+							<option value="2">February</option>
+							<option value="3">March</option>
+							<option value="4">April</option>
+							<option value="5">May</option>
+							<option value="6">June</option>
+							<option value="7">July</option>
+							<option value="8">August</option>
+							<option value="9">September</option>
+							<option value="10">October</option>
+							<option value="11">November</option>
+							<option value="12">December</option>
+						</select>
+					</div>
+				</div>
+				<div class="col"> 
+					<button
+						name="btnSearch" 
+						type="button" 
+						class="btn btn-primary search-button p-1"
+						onclick="getSearchList()"
+						data-test="create-button"
+					>
+						Search
+					</button>
+				</div>
+					<div class="row mt-3"></div>
+				</div>
 					</div>
 					<div class="row mt-3"></div>
 					</form>
@@ -177,9 +213,14 @@
           } 
         }
 
-        let clearedinptStartYm , clearedinptEndYm;
-        let inputStartStdYm = document.getElementById('inpStartStdYm')
-        let inputEndStdYm = document.getElementById('inpEndStdYm')
+		let clearedinptStartYm , clearedinptEndYm;
+		let inputStartStdYear = document.getElementById('inpStartStdYr');
+		let inputStartStdMonth = document.getElementById('inpStartMnth');
+		let inputEndStdYear = document.getElementById('inpEndStdYr');
+		let inputEndStdMonth = document.getElementById('inpEndMnth');
+		
+		let inputStartStdYm = inputStartStdYear + inputStartStdMonth.padStart(2, "0");
+		let inputEndStdYm = inputEndStdYear + inputEndStdMonth.padStart(2, "0");
 
         // we check based on whether the input value is inserted or not 
         if(inputStartStdYm !== "" && inputEndStdYm !== "") {
