--- a/src/main/resources/templates/views/wrk/fil/WRKFIL003M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL003M0.html
@@ -12,9 +12,24 @@
             <form id="divSearch" name="divSearch" method="post" action="/WRKFIL001M0SelectList"
               onsubmit="return false;">
               <div class="row align-items-center">
+                <!-- Year Select -->
+                <div class="col-auto">
+                  <label class="form-label"> Standard Year/Month </label>
+                  <select name="user[year]" class="form-select select-month-year p-1" id="inputYear">
+                    <option selected value="">- Year -</option>
+                    <!-- Year Options -->
+                    <option value="2020">2020</option>
+                    <option value="2021">2021</option>
+                    <option value="2022">2022</option>
+                    <option value="2023">2023</option>
+                    <option value="2024">2024</option>
+                    <option value="2025">2025</option>
+                    <option value="2026">2026</option>
+                  </select>
+                </div>
                 <!-- Month Select -->
                 <div class="col-auto">
-                  <label class="form-label"> Month: </label>
+                  <label class="form-label"> &nbsp; </label>
                   <select name="user[month]" class="form-select select-month-year p-1" id="inputMonth">
                     <option selected value="">- Month -</option>
                     <!-- Month Options -->
@@ -30,21 +45,6 @@
                     <option value="10">October</option>
                     <option value="11">November</option>
                     <option value="12">December</option>
-                  </select>
-                </div>
-                <!-- Year Select -->
-                <div class="col-auto">
-                  <label class="form-label"> Year: </label>
-                  <select name="user[year]" class="form-select select-month-year p-1" id="inputYear">
-                    <option selected value="">- Year -</option>
-                    <!-- Year Options -->
-                    <option value="2020">2020</option>
-                    <option value="2021">2021</option>
-                    <option value="2022">2022</option>
-                    <option value="2023">2023</option>
-                    <option value="2024">2024</option>
-                    <option value="2025">2025</option>
-                    <option value="2026">2026</option>
                   </select>
                 </div>
                 <!-- Options Select  -->
