--- a/src/main/resources/templates/views/biz/jnl/BIZJNL002M0.html
+++ b/src/main/resources/templates/views/biz/jnl/BIZJNL002M0.html
@@ -17,11 +17,11 @@
 						<div class="form-box">
 							<form id="filter-form" name="form" method="post" action="/BIZJNL002M0SelectList" onsubmit="return false;" >
 								<div class="row">
-									<div class="col">
-										<input id="inpSearchTxt" name="inpSearchTxt" type="text" class="form-input-temp" placeholder="Account Title/Name" />
-										<button type="button" class="btn btn-primary" style="padding: 4px 10px; color: white; font-size: 13px" onclick="main()" >
-											Search
-										</button>
+									<div class="col-sm-6 col-md-3">
+										<input id="inpSearchTxt" name="inpSearchTxt" type="text" class="form-control p-1" placeholder="Account Title/Name" />
+									</div>
+									<div class="col-auto">
+										<button type="button" class="btn btn-primary" style="padding: 4px 10px; color: white; font-size: 13px" onclick="main()" >Search</button>
 									</div>
 									<div class="col text-end">
 										<button form="new-form" type="button" class="btn btn-primary" style="padding: 4px 10px; color: white; font-size: 13px"
@@ -196,10 +196,10 @@
 			{id: "lvl2Cd",			name: "Level2",				field: "lvl2Cd",		width: 70,	sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center"},
 			{id: "lvl3Cd",			name: "Level3",				field: "lvl3Cd",		width: 70,	sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center"},
 			{id: "drAcSubjCd",		name: "Dr Code",			field: "drAcSubjCd",	width: 100,	sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center"},
-			{id: "drAcSubjNm",		name: "Dr Name",			field: "drAcSubjNm",	width: 400,	sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns"},
+			{id: "drAcSubjNm",		name: "Dr Name",			field: "drAcSubjNm",	width: 400,	sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-left"},
 			{id: "crAcSubjCd",		name: "Cr Code",			field: "crAcSubjCd",	width: 100,	sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center"},
-			{id: "crAcSubjNm",		name: "Cr Name",			field: "crAcSubjNm",	width: 400,	sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns"},
-			{id: "etcDesc",			name: "Note",				field: "etcDesc",		width: 400,	sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns"},
+			{id: "crAcSubjNm",		name: "Cr Name",			field: "crAcSubjNm",	width: 400,	sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-left"},
+			{id: "etcDesc",			name: "Note",				field: "etcDesc",		width: 400,	sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-left"},
 			{id: "useYn",			name: "Use YN",				field: "useYn",			width: 60,	sortable: true, editor: function(args) { return new ComboBoxEditor(args, [ { key: 'Y', value: 'Y' }, { key: 'N', value: 'N' }]);}, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" },
 			{id: "frstRegEmpNo",	name: "Registrant",			field: "frstRegEmpNo",	width: 100,	sortable: true, editor: Slick.Editors.Text, headerCssClass: "slick-header-columns", cssClass: "slick-column-center"},
 			{id: "frstRegDtm",		name: "Registration Date",	field: "frstRegDtm",	width: 120,	sortable: true, editor: Slick.Editors.Text, headerCssClass: "slick-header-columns", cssClass: "slick-column-center"}
@@ -218,7 +218,8 @@
 			enableAddRow: true,
   			asyncEditorLoading: false,
    			autoEdit: false,
- 			autoEditNewRow: false
+ 			autoEditNewRow: false,
+ 			rowHeight: 35,
 		};
 
 
@@ -238,23 +239,7 @@
 			},
 		};
 
-		function addSlickGridSomeStyling() {
-			const style = document.createElement("style");
-			style.innerHTML = `
-				.slick-header-columns {
-					font-family: San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
-					font-size: 13px;
-				}
-				.slick-cell {
-					font-family: San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
-					font-size: 13px;
-				}
-				`;
-			document.head.appendChild(style);
-		}
-
 			function main() {
-				addSlickGridSomeStyling();
 				// 그리드 초기화 및 데이터 로드
 				console.log("Initializing SlickGrid...");
 				getList(
