--- a/src/main/resources/templates/views/biz/adt/BIZADT001M0.html
+++ b/src/main/resources/templates/views/biz/adt/BIZADT001M0.html
@@ -1,69 +1,55 @@
 <!DOCTYPE html>
-<html
-	lang="ko"
-	xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorate="~{layout/layout}"
->
-	<th:block layout:fragment="content">
-		<script src="js/js-tabler/demo-theme.min.js?1692870487"></script>
-		<div class="page-wrapper" id="page-wrapper">
-			<div class="container" id="container">
-				<h2>[[${menuNm}]]</h2>
-				<div class="ptag-container">
-					<span>[[${navigator}]]</span>
-					<div class="form-container">
-						<div class="form-box">
-							<form id="filter-form" name="form" method="post" action="/BIZADT001M0SelectList" onsubmit="return false;">
-								<div class="row">
-									<div class="col">
-										<input id="inpSearchTxt" name="inpSearchTxt" type="text" class="form-input-temp" placeholder="Account Title/Name"/>
-										<button type="button" class="btn btn-primary" style="padding: 4px 10px; color: white; font-size: 13px" onclick="main()">
-											Search
-										</button>
-									</div>
-									<div class="col text-end">
-										<button form="new-form" type="button" class="btn btn-primary" style="padding: 4px 10px; color: white; font-size: 13px" onclick="reconcile()" data-test="create-button" onsubmit="return false;">
-											Reconcile
-										</button>
-										<button type="button" class="btn btn-lime" style="padding: 4px 10px; color: white; font-size: 13px" id="downloadExcel">
-											Download
-										</button>
-									</div>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/layout}">
+<th:block layout:fragment="content">
+	<script src="js/js-tabler/demo-theme.min.js?1692870487"></script>
+	<div class="page-wrapper" id="page-wrapper">
+		<div class="container" id="container">
+			<h2>[[${menuNm}]]</h2>
+			<div class="ptag-container">
+				<span>[[${navigator}]]</span>
+				<div class="form-container">
+					<div class="form-box">
+						<form id="filter-form" name="form" method="post" action="/BIZADT001M0SelectList" onsubmit="return false;">
+							<div class="row">
+								<div class="col-sm-6 col-md-3">
+									<input id="inpSearchTxt" name="inpSearchTxt" type="text" class="form-control p-1" placeholder="Account Title/Name" />
 								</div>
-							</form>
-						</div>
+								<div class="col-auto">
+									<button type="button" class="btn btn-primary" style="padding: 4px 10px; color: white; font-size: 13px" onclick="main()">Search</button>
+								</div>
+								<div class="col text-end">
+									<button form="new-form" type="button" class="btn btn-primary" style="padding: 4px 10px; color: white; font-size: 13px" onclick="reconcile()" data-test="create-button" onsubmit="return false;">Reconcile</button>
+									<button type="button" class="btn btn-lime" style="padding: 4px 10px; color: white; font-size: 13px" id="downloadExcel">Download</button>
+								</div>
+							</div>
+						</form>
 					</div>
-					<div style="padding-top: 2em"></div>
-					<div style="padding-top: 2em"></div>
-					<div class="card card-md" id="divMyGrid">
-						<table class="table" align="center" style="width: 1284px; height: 500px"></table>
-					</div>
-	 			</div>
-				<div class="popupDataForm">
-					<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" style="display: none">
-						Launch modal with form
-					</button>
-					<div class="modal fade" id="exampleModal" tabindex="-1" style="display: none">
-						<div class="modal-dialog modal-small" role="document">
-							<div class="modal-content">
-								<div class="modal-header">
-									<h5 class="modal-title">New report</h5>
-									<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<div style="padding-top: 2em"></div>
+				<div style="padding-top: 2em"></div>
+				<div class="card card-md" id="divMyGrid">
+					<table class="table" align="center" style="width: 1284px; height: 500px"></table>
+				</div>
+			</div>
+			<div class="popupDataForm">
+				<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" style="display: none">Launch modal with form</button>
+				<div class="modal fade" id="exampleModal" tabindex="-1" style="display: none">
+					<div class="modal-dialog modal-small" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title">New report</h5>
+								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+							</div>
+							<div class="modal-body">
+								<div class="row"></div>
+							</div>
+							<div class="modal-footer">
+								<div class="col flex-start">
+									<a href="#" class="btn btn-link link-secondary" data-bs-dismiss="modal">Cancel</a>
 								</div>
-								<div class="modal-body">
-									<div class="row"></div>
-								</div>
-								<div class="modal-footer">
-									<div class="col flex-start">
-										<a href="#" class="btn btn-link link-secondary" data-bs-dismiss="modal">Cancel</a>
-									</div>
-									<div class="col-auto me-0 p-1"></div>
-									<div class="col-auto m-0">
-										<a href="#" class="btn btn-primary ms-auto" data-bs-dismiss="modal" style="padding: 4px 10px; color: white; font-size: 13px">
-											Save changes
-										</a>
-									</div>
+								<div class="col-auto me-0 p-1"></div>
+								<div class="col-auto m-0">
+									<a href="#" class="btn btn-primary ms-auto" data-bs-dismiss="modal" style="padding: 4px 10px; color: white; font-size: 13px"> Save changes </a>
 								</div>
 							</div>
 						</div>
@@ -71,6 +57,7 @@
 				</div>
 			</div>
 		</div>
+	</div>
 	<script>
 		function checkData(data){
 		return parentCheckData(data, check_cols);
@@ -105,9 +92,9 @@
 		var check_cols = [unqId, "atitCd"];
 		var columns = [
 			{id: "atitCd",			name: "Account Title",		field: "atitCd",		width: 80,	sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center"},
-			{id: "atitNm",			name: "Account Title Name",	field: "atitNm",		width: 100,	sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns"},
+			{id: "atitNm",			name: "Account Title Name",	field: "atitNm",		width: 100,	sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-left"},
 			{id: "insuPlItmCd",		name: "Insurance Code",		field: "insuPlItmCd",	width: 80,	sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center"},
-			{id: "insuPlItmNm",		name: "Insurance Name",		field: "insuPlItmNm",	width: 100, sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns"},
+			{id: "insuPlItmNm",		name: "Insurance Name",		field: "insuPlItmNm",	width: 100, sortable: true, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-left"},
 			{id: "acntAmt",			name: "Amt",				field: "acntAmt",					sortable: true, editor: Slick.Editors.Text, validator: createValidator, formatter: currencyFormatter, headerCssClass: "slick-header-columns", cssClass: "slick-column-right"},
 			{id: "insuPlItmAmt",	name: "Recon Amt",			field: "insuPlItmAmt",				sortable: true, editor: Slick.Editors.Text, validator: createValidator, formatter: currencyFormatter, headerCssClass: "slick-header-columns", cssClass: "slick-column-right"},
 			{id: "diffAmt",			name: "Diff",				field: "diffAmt",					sortable: true, editor: Slick.Editors.Text, validator: createValidator, formatter: currencyFormatter, headerCssClass: "slick-header-columns", cssClass: "slick-column-right"},
@@ -128,7 +115,8 @@
             enableAddRow: true,
             asyncEditorLoading: false,
             autoEdit: false,
-            autoEditNewRow: false
+            autoEditNewRow: false,
+            rowHeight: 35,
         };
         
         var newRowIds = 0;
@@ -248,7 +236,6 @@
         };
         
         function reconcile(){
-            addSlickGridSomeStyling();
             $.ajax({
                   type: "post",
                   url: '/BIZADT001M0ExecuteList',
@@ -606,5 +593,5 @@
             }
         }
     </script>
- </th:block>
+</th:block>
 </html>
